// Code generated by make; DO NOT EDIT.
syntax = "proto3";
package gslbi.v1;


option go_package = "github.com/snapp-cab/consul-gslb-driver/internal/gslbi";


service Controller {
  rpc CreateGSLB (CreateGSLBRequest)
    returns (CreateGSLBResponse) {}

  rpc DeleteGSLB (DeleteGSLBRequest)
    returns (DeleteGSLBResponse) {}

  rpc ControllerGetGSLB (ControllerGetGSLBRequest)
    returns (ControllerGetGSLBResponse) {
    }
}


message CreateGSLBRequest {
  // The suggested name for the gslb service.
  // This field is REQUIRED.
  string name = 1;
}

message CreateGSLBResponse {
  // gslb ID
  // This field is REQUIRED.
  string GSLB = 1;
}

message DeleteGSLBRequest {
  // The ID of the GSLB to be deprovisioned.
  // This field is REQUIRED.
  string serviceID = 1;
}

message DeleteGSLBResponse {
  // This field is REQUIRED.
  string Name = 1;
}


message ControllerGetGSLBRequest {

  // The ID of the GSLB to fetch current GSLB information for.
  // This field is REQUIRED.
  string GSLB_id = 1;
}

message ControllerGetGSLBResponse {


  // This field is REQUIRED
  string GSLB = 1;
}

